[gd_scene load_steps=2 format=3 uid="uid://cgd1aj6syol02"]

[ext_resource type="Script" path="res://addons/godot-playfab/Scenes/Editor/EditorMain.gd" id="1_g5xrh"]

[node name="EditorMain" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g5xrh")

[node name="TitleIdContainer" type="HFlowContainer" parent="."]
layout_mode = 0
offset_right = 437.0
offset_bottom = 40.0

[node name="TitleIdLabel" type="Label" parent="TitleIdContainer"]
layout_mode = 2
offset_top = 2.0
offset_right = 63.0
offset_bottom = 28.0
text = "Title ID: "

[node name="TitleIdLineEdit" type="LineEdit" parent="TitleIdContainer"]
layout_mode = 2
offset_left = 67.0
offset_right = 134.0
offset_bottom = 31.0
tooltip_text = "Get the Title ID from the PlayFab GameManager"
placeholder_text = "Title ID"

[connection signal="text_changed" from="TitleIdContainer/TitleIdLineEdit" to="." method="_on_title_id_line_edit_text_changed"]
